# RoCKInCamp

./: README.md
vision_tasks/object_recognition/: CMakeLists.txt
vision_tasks/object_recognition/launch/: allnodes.launch  rec_test.launch
